# mlaatkst

./: .gitignore  App.py  BookFrame.py  CitationFormatter.py  ControlFrame.py  EntryFrame.py  README.md  constants.py  control_frame.py  entry_frame.py  helpers.py  install.py  install.sh  installer  main.py  meson.build  mlaatkst.py  requirements.txt  run.py
assets/: bg.afdesign  bg2.afdesign  bg3.afdesign  ico.afdesign  ico.icns  splash.afdesign
img/: banner.xpm  mlaatkst.xpm
include/: id.hpp  mainframe.hpp  quotation_formatter.hpp  toppanel.hpp
mlaatkst/: __main__.py  citation_formatter.py  constants_de.py  constants_eng.py  control_frame.py  entry_frame.py  language_helper.py  main.py  menubar.py  resource_helper.py  settings_window.py
resources/: Info.plist  mlaatkst.afdesign  mlaatkst.desktop  mlaatkst.icns
resources/lang/: extract.sh
resources/lang/de/LC_MESSAGES/: messages.mo  messages.po  mlaatkst.mo  mlaatkst.po
src/: citation_formatter.py  constants.py  constants_de.py  constants_eng.py  control_frame.py  entry_frame.py  id.cpp  language_helper.py  main.cpp  main.py  mainframe.cpp  menubar.py  quotation_formatter.cpp  settings_window.py  toppanel.cpp
